# evwatch

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: daily.yml  release-desktop.yml
apps/desktop/: .env.example  electron-builder.yml  package.json
apps/desktop/src/main/: index.ts  scrape-queue.ts  updater.ts  venv.ts
apps/desktop/src/preload/: index.d.ts  index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/renderer/src/components/: ListingRow.tsx  ListingsTab.tsx  ListingsTable.tsx  ScrapeConsole.tsx  SettingsTab.tsx  Sidebar.tsx  SourceLogTab.tsx  UpdateBanner.tsx
apps/web/: .env.example  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/components/: FilterBar.tsx  ListingRow.tsx  ListingsTable.tsx  Pagination.tsx  QuickFilters.tsx  SourceHealthFooter.tsx
apps/web/lib/: filters.ts  format.ts  supabase.ts  watchlist.ts
config/: watchlist.yml
infra/supabase/migrations/: 001_init.sql  002_deal_tags.sql
pipeline/: __init__.py  build_trends.py  detect_deals.py  record_run.py  send_digest.py  update_baselines.py
scrapers/: __init__.py  _common.py  _playwright.py  autotempest.py  autotrader.py  cargurus.py  carmax.py  cars_dot_com.py  carvana.py  craigslist.py  ebay.py  iseecars.py  wayback.py
scrapers/data/: us_zips_pnw.csv
scripts/: build_zip_csv.py
templates/: email.html.j2
tests/: test_common.py
(+3 files in other folders)
