[project]
name = "evwatch"
version = "0.1.0"
description = "Used EV market monitor for the Pacific Northwest"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Visual Entropy Productions" }]

dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "playwright>=1.46",
    "supabase>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["scrapers*", "pipeline*"]
